<resources>
    <string name="app_name">Music Player</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="add">Add</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="song_name">Song Name:</string>
    <string name="artist">Artist:</string>
    <string name="album">Album:</string>
    <string name="disc">Disc:</string>
    <string name="track">Track</string>
    <string name="year">Year</string>
    <string name="path">Path:</string>
    <string name="delete_dialog">Delete this song?</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="add_a_new_playlist">Add a new playlist!</string>
    <string name="playlist_name">Playlist Name</string>
    <string name="name">Name</string>
    <string name="create">Create</string>
    <string name="remove">Remove</string>
    <string name="delete_playlist">Delete Playlist?</string>
    <string name="search_hint">What would you like to search today?</string>
</resources>