<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:menu="@menu/edit_menu"/>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="20dp"
        android:layout_gravity="center_horizontal">
        <ImageView
            android:id="@+id/album_art"
            android:layout_width="150dp"
            android:layout_height="150dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>
        <TextView
            android:id="@+id/song_name_label"
            android:labelFor="@id/song"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/album_art"
            android:layout_marginStart="10dp"
            android:textColor="@color/white"
            android:text="@string/song_name"
            android:textSize="15sp"/>
        <EditText
            android:id="@+id/song"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/album_art"
            app:layout_constraintTop_toBottomOf="@id/song_name_label"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:textSize="15sp"
            android:textColor="@color/white"
            android:text=""
            android:inputType="none"
            android:background="@color/black"/>
        <TextView
            android:id="@+id/artist_label"
            android:labelFor="@id/song"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/song"
            app:layout_constraintStart_toEndOf="@id/album_art"
            android:layout_marginStart="10dp"
            android:textColor="@color/white"
            android:text="@string/artist"
            android:textSize="15sp"
            android:layout_marginTop="20dp"/>
        <EditText
            android:id="@+id/artist"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/album_art"
            app:layout_constraintTop_toBottomOf="@id/artist_label"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:textSize="15sp"
            android:textColor="@color/white"
            android:background="@color/black"/>
        <TextView
            android:id="@+id/album_label"
            android:labelFor="@id/album"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/album_art"
            android:textColor="@color/white"
            android:text="@string/album"
            android:textSize="15sp"
            android:inputType="none"
            android:layout_marginTop="10dp"/>
        <EditText
            android:id="@+id/album"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/album_label"
            android:layout_marginTop="10dp"
            android:textSize="15sp"
            android:textColor="@color/white"
            android:background="@color/black"
            android:inputType="none"/>
        <TextView
            android:id="@+id/disc_label"
            android:labelFor="@id/disc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/album"
            android:textColor="@color/white"
            android:text="@string/disc"
            android:textSize="15sp"
            android:inputType="none"
            android:layout_marginTop="20dp"/>
        <EditText
            android:id="@+id/disc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/disc_label"
            android:layout_marginTop="10dp"
            android:textSize="15sp"
            android:textColor="@color/white"
            android:background="@color/black"
            android:inputType="text"/>
        <TextView
            android:id="@+id/track_label"
            android:labelFor="@id/track"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/disc"
            android:textColor="@color/white"
            android:text="@string/track"
            android:textSize="15sp"
            android:inputType="none"
            android:layout_marginTop="20dp"/>
        <EditText
            android:id="@+id/track"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/track_label"
            android:layout_marginTop="10dp"
            android:textSize="15sp"
            android:textColor="@color/white"
            android:background="@color/black"
            android:inputType="none"/>
        <TextView
            android:id="@+id/year_label"
            android:labelFor="@id/album"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/track"
            android:textColor="@color/white"
            android:text="@string/year"
            android:textSize="15sp"
            android:inputType="none"
            android:layout_marginTop="20dp"/>
        <EditText
            android:id="@+id/year"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/year_label"
            android:layout_marginTop="10dp"
            android:textSize="15sp"
            android:textColor="@color/white"
            android:background="@color/black"
            android:inputType="none"/>
        <TextView
            android:id="@+id/path_label"
            android:labelFor="@id/album"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/year"
            android:textColor="@color/white"
            android:text="@string/path"
            android:textSize="15sp"
            android:inputType="none"
            android:layout_marginTop="20dp"/>
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/path"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/path_label"
            android:layout_marginTop="10dp"
            android:textSize="15sp"
            android:textColor="@color/white"
            android:background="@color/black" />
        <Button
            android:id="@+id/cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/black"
            android:text="@string/cancel"
            android:textColor="@color/blue"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/save"
            app:layout_constraintHorizontal_chainStyle="packed"
            android:visibility="gone"/>
        <Button
            android:id="@+id/save"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/black"
            android:text="@string/save"
            android:textColor="@color/blue"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:visibility="gone"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.appcompat.widget.LinearLayoutCompat>